--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
+.idea/sonarlint/*
 .idea/modules.xml
 .idea/misc.xml
 .idea/jarRepositories.xml
